--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouTube Music Player</title>
+    
+    <!-- YouTube iframe API is loaded dynamically by YouTubePlayer component -->
+    <!-- <script src="https://www.youtube.com/iframe_api"></script> -->
   </head>
   <body>
     <div id="app"></div>
